<?xml version="1.0"?>
<package format="2">
  <name>libg2o</name>
  <version>2020.5.3</version>
  <description>The libg2o library from http://openslam.org/g2o.html</description>
  <url>https://github.com/RainerKuemmerle/g2o</url>

  <author>Rainer Kuemmerle</author>
  <author>Giorgio Grisetti</author>
  <author>Hauke Strasdat</author>
  <author>Kurt Konolige</author>
  <author>Wolfram Burgard</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>
  <license>BSD</license>

  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_export_depend>boost</build_export_depend>

  <build_depend>eigen</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>suitesparse</build_depend>

  <exec_depend>eigen</exec_depend>
  <exec_depend>opengl</exec_depend>
  <exec_depend>suitesparse</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
